recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:6: error: not found: value drote
    drote(90.00);
    ^