recursion.logo.square.FourSquare.scala.code
override def run() {
  
	for(i <- 0 to 3){
  
  	avance(100.00);
  	drote(90.00);
    
  }
  
}